tests/verifier/pass/test6.ial
type S
{
}

function void eh_reach_test()
{
    block entry
    {
        leave;
    }

    block foo
    {
        eh.rethrow;
    }
}
